--- a/.github/workflows/nunit-pipeline.yml
+++ b/.github/workflows/nunit-pipeline.yml
@@ -1,12 +1,12 @@
-name: TUnit Only
+name: NUnit Only
 
 on:
   push:
     paths:
-      - '.github/workflows/tunit-pipeline.yml'
-      - 'Saucery.TUnit/**'
-      - 'Merlin.TUnit/**'
-      - 'Merlin.TUnit.RealDevices/**'
+      - '.github/workflows/nunit-pipeline.yml'
+      - 'Saucery/**'
+      - 'Merlin.NUnit/**'
+      - 'Merlin.NUnit.RealDevices/**'
     branches:
       - master
       - 'dependabot/**'
@@ -21,22 +21,25 @@ on:
 env:
   PROJECT_NAME: Saucery
   SOLN_FILE: Saucery.sln                                                                        # full path to your solution file
-  TUNIT_INT_DIR: Merlin.TUnit
-  TUNIT_RD_INT_DIR: Merlin.TUnit.RealDevices
   COVERLET_DIR: ./TestResults
+  NUNIT_INT_DIR: Merlin.NUnit
+  NUNIT_RD_INT_DIR: Merlin.NUnit.RealDevices
+
   UT_PROJECT: Saucery.Core.Tests/Saucery.Core.Tests.csproj                                      # full path to your unit test project file
   TT_PROJECT: Template.Tests/Template.Tests.csproj
-  M_TUNIT_PROJECT: Merlin.TUnit/Merlin.TUnit.csproj                                             # full path to xunit internal integration test project file
-  M_RD_TUNIT_PROJECT: Merlin.TUnit.RealDevices/Merlin.TUnit.RealDevices.csproj                  # full path to xunit internal integration test project file
+  
+  M_NUNIT_PROJECT: Merlin.NUnit/Merlin.NUnit.csproj                                             # full path to nunit internal integration test project file
+  M_RD_NUNIT_PROJECT: Merlin.NUnit.RealDevices/Merlin.NUnit.RealDevices.csproj                  # full path to nunit internal real device integration test project file
+  
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
   CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
   CONFIG: Release
   APP_PACKAGE_PATH: 'published'                                                                 # set this to the path to your web app project, defaults to the repository root
   COVERAGE_FORMAT: cobertura
-  UNIT_COVERAGE_FILENAME: cobertura.unit.xml
-  TUNIT_INTEGRATION_COVERAGE_FILENAME: cobertura.tunit.integration.xml
-  TUNIT_RD_INTEGRATION_COVERAGE_FILENAME: cobertura.tunit.realdevice.integration.xml
+  UNIT_COVERAGE_FILENAME: opencover.unit.xml
+  NUNIT_INTEGRATION_COVERAGE_FILENAME: opencover.nunit.integration.xml
+  NUNIT_RD_INTEGRATION_COVERAGE_FILENAME: opencover.nunit.realdevice.integration.xml
   COVERAGE_THRESHOLD: 80
 
 jobs:
@@ -71,11 +74,10 @@ jobs:
        --coverage \
        --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.UNIT_COVERAGE_FILENAME }}" \
        --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
-       --results-directory "${{ env.COVERLET_DIR }}" \
-       --log-level Debug
+       --results-directory "TestResults"
 
     - name: Run Template Tests
-      run: dotnet test -c ${{ env.CONFIG }} --filter "Group=TUnit" ${{ env.TT_PROJECT }}
+      run: dotnet test -c ${{ env.CONFIG }} ${{ env.TT_PROJECT }}
 
     - name: Display structure of downloaded files
       run: ls -R
@@ -92,9 +94,9 @@ jobs:
         name: unit-test-results
         path: ${{ env.COVERLET_DIR }}/${{env.UNIT_COVERAGE_FILENAME}}
 
-  tunit-integration-tests:
+  nunit-integration-tests:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: build
 
     steps:
     - name: Checkout Code
@@ -108,15 +110,15 @@ jobs:
     
     - name: Compile solution
       run: dotnet build -c ${{ env.CONFIG }}
-    
-    - name: Run TUnit Integration Tests
-      run: |
-       dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_TUNIT_PROJECT }} -- \
-       --coverage \
-       --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}" \
-       --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
-       --results-directory "${{ env.COVERLET_DIR }}" \
-       --log-level Debug
+
+    - name: Run NUnit Integration Tests
+      uses: b3b00/coverlet-action@1.3.5-alpha2
+      with:
+        testProject: ${{ env.M_NUNIT_PROJECT }}
+        output: ${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }}
+        outputFormat: ${{ env.COVERAGE_FORMAT }}
+        #threshold: ${{ env.COVERAGE_THRESHOLD }}
+        excludes: '[Merlin.NUnit]Tests.*'
 
     - name: Display structure of downloaded files
       run: ls -R
@@ -124,12 +126,13 @@ jobs:
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: tunit-integration-test-results
-        path: ${{ env.COVERLET_DIR }}/${{env.TUNIT_INTEGRATION_COVERAGE_FILENAME}}
+        name: nunit-integration-test-results
+        path: ${{ env.COVERLET_DIR }}/${{env.NUNIT_INTEGRATION_COVERAGE_FILENAME}}
 
-  tunit-real-integration-tests:
+  nunit-real-integration-tests:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: build
+
     steps:
     - name: Checkout Code
       uses: actions/checkout@v5
@@ -143,25 +146,28 @@ jobs:
     - name: Compile solution
       run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run TUnit Real Integration Tests
-      run: |
-       dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_RD_TUNIT_PROJECT }} -- \
-       --coverage \
-       --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}" \
-       --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
-       --results-directory "${{ env.COVERLET_DIR }}" \
-       --log-level Debug
-      
+    - name: Run NUnit Integration Tests
+      uses: b3b00/coverlet-action@1.3.5-alpha2
+      with:
+        testProject: ${{ env.M_RD_NUNIT_PROJECT }}
+        output: ${{ env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
+        outputFormat: ${{ env.COVERAGE_FORMAT }}
+        #threshold: ${{ env.COVERAGE_THRESHOLD }}
+        excludes: '[Merlin.NUnit.RealDevices]Tests.*'
+
+    - name: Display structure of downloaded files
+      run: ls -R
+
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: tunit-real-integration-test-results
-        path: ${{ env.COVERLET_DIR }}/${{env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
+        name: nunit-real-integration-test-results
+        path: ${{ env.COVERLET_DIR }}/${{env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
 
   generate-report:
     runs-on: ubuntu-latest
-    needs: [tunit-integration-tests,
-            tunit-real-integration-tests]
+    needs: [nunit-integration-tests,
+            nunit-real-integration-tests]
     steps:
     - name: Checkout Code
       uses: actions/checkout@v5
@@ -171,15 +177,15 @@ jobs:
       with:
         name: unit-test-results
 
-    - name: Download tunit-integration-test results
+    - name: Download nunit-integration-test results
       uses: actions/download-artifact@v5
       with:
-        name: tunit-integration-test-results
+        name: nunit-integration-test-results
 
-    - name: Download tunit-real-integration-test results
+    - name: Download nunit-real-integration-test results
       uses: actions/download-artifact@v5
       with:
-        name: tunit-real-integration-test-results
+        name: nunit-real-integration-test-results
     
     # - name: Present working directory
     #   run: pwd
@@ -191,7 +197,7 @@ jobs:
       uses: danielpalme/ReportGenerator-GitHub-Action@5.4.17
       with:
         # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
-        reports: ${{env.UNIT_COVERAGE_FILENAME}}
+        reports: ${{env.UNIT_COVERAGE_FILENAME}};${{env.NUNIT_INTEGRATION_COVERAGE_FILENAME}};${{env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
         targetdir: 'coveragereport' # REQUIRED # The directory where the generated report should be saved.
         reporttypes: 'HtmlInline;Cobertura' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MarkdownSummary, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
 
