--- a/.github/workflows/tunit-pipeline.yml
+++ b/.github/workflows/tunit-pipeline.yml
@@ -19,19 +19,19 @@ on:
 
 env:
   PROJECT_NAME: Saucery
-  SOLN_FILE: Saucery.sln                                                                        # full path to your solution file
+  SOLN_FILE: Saucery.sln
   TUNIT_INT_DIR: Merlin.TUnit
   TUNIT_RD_INT_DIR: Merlin.TUnit.RealDevices
   COVERLET_DIR: ./TestResults
-  UT_PROJECT: Saucery.Core.Tests/Saucery.Core.Tests.csproj                                      # full path to your unit test project file
+  UT_PROJECT: Saucery.Core.Tests/Saucery.Core.Tests.csproj
   TT_PROJECT: Template.Tests/Template.Tests.csproj
-  M_TUNIT_PROJECT: Merlin.TUnit/Merlin.TUnit.csproj                                             # full path to xunit internal integration test project file
-  M_RD_TUNIT_PROJECT: Merlin.TUnit.RealDevices/Merlin.TUnit.RealDevices.csproj                  # full path to xunit internal integration test project file
+  M_TUNIT_PROJECT: Merlin.TUnit/Merlin.TUnit.csproj
+  M_RD_TUNIT_PROJECT: Merlin.TUnit.RealDevices/Merlin.TUnit.RealDevices.csproj
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
   CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
   CONFIG: Release
-  APP_PACKAGE_PATH: 'published'                                                                 # set this to the path to your web app project, defaults to the repository root
+  APP_PACKAGE_PATH: 'published'
   COVERAGE_FORMAT: cobertura
   UNIT_COVERAGE_FILENAME: cobertura.unit.xml
   TUNIT_INTEGRATION_COVERAGE_FILENAME: cobertura.tunit.integration.xml
@@ -41,43 +41,34 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout Code
       uses: actions/checkout@v5
-
     - name: Setup dotnet
       uses: actions/setup-dotnet@v5
       with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
         dotnet-version: 9.0.x
-
     - name: Compile solution
       run: dotnet build -c ${{ env.CONFIG }}
-
     - name: Run TUnit Unit tests (with coverage + TRX)
       run: |
-       dotnet run -c ${{ env.CONFIG }} --project ${{ env.UT_PROJECT }} -- \
-       --report-trx \
-       --report-trx-filename "unit.trx" \
-       --coverage \
-       --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.UNIT_COVERAGE_FILENAME }}" \
-       --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
-       --results-directory "${{ env.COVERLET_DIR }}" \
-       --log-level Debug
-
+        dotnet run -c ${{ env.CONFIG }} --project ${{ env.UT_PROJECT }} -- \
+        --report-trx \
+        --report-trx-filename "unit.trx" \
+        --coverage \
+        --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.UNIT_COVERAGE_FILENAME }}" \
+        --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
+        --results-directory "${{ env.COVERLET_DIR }}" \
+        --log-level Debug
     - name: Run Template Tests
       run: dotnet test -c ${{ env.CONFIG }} --filter "Group=TUnit" ${{ env.TT_PROJECT }}
-
     - name: Display structure of downloaded files
       run: ls -R
-
     - name: Upload TRX
       uses: actions/upload-artifact@v5
       with:
         name: unit-test-trx
         path: ${{ env.COVERLET_DIR }}/unit.trx
-
     - name: Publish Artifacts
       uses: actions/upload-artifact@v5
       with:
@@ -87,32 +78,25 @@ jobs:
   tunit-integration-tests:
     runs-on: ubuntu-latest
     needs: [build]
-
     steps:
     - name: Checkout Code
       uses: actions/checkout@v5
-
     - name: Setup dotnet
       uses: actions/setup-dotnet@v5
       with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
         dotnet-version: 9.0.x
-    
     - name: Compile solution
       run: dotnet build -c ${{ env.CONFIG }}
-    
     - name: Run TUnit Integration Tests
       run: |
-       dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_TUNIT_PROJECT }} -- \
-       --coverage \
-       --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}" \
-       --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
-       --results-directory "${{ env.COVERLET_DIR }}" \
-       --log-level Debug
-
+        dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_TUNIT_PROJECT }} -- \
+        --coverage \
+        --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}" \
+        --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
+        --results-directory "${{ env.COVERLET_DIR }}" \
+        --log-level Debug
     - name: Display structure of downloaded files
       run: ls -R
-
     - name: Publish Artifacts
       uses: actions/upload-artifact@v5
       with:
@@ -125,35 +109,120 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v5
-
     - name: Setup dotnet
       uses: actions/setup-dotnet@v5
       with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
         dotnet-version: 9.0.x
-    
     - name: Compile solution
       run: dotnet build -c ${{ env.CONFIG }}
-
     - name: Run TUnit Real Integration Tests
       run: |
-       dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_RD_TUNIT_PROJECT }} -- \
-       --coverage \
-       --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}" \
-       --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
-       --results-directory "${{ env.COVERLET_DIR }}" \
-       --log-level Debug
-      
+        dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_RD_TUNIT_PROJECT }} -- \
+        --coverage \
+        --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}" \
+        --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
+        --results-directory "${{ env.COVERLET_DIR }}" \
+        --log-level Debug
     - name: Publish Artifacts
       uses: actions/upload-artifact@v5
       with:
         name: tunit-real-integration-test-results
         path: ${{ env.COVERLET_DIR }}/${{env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
 
+  # NEW: publish Saucery.TUnit to NuGet if newer
+  publish-saucery-tunit:
+    runs-on: ubuntu-latest
+    needs: [tunit-integration-tests, tunit-real-integration-tests]
+    if: github.ref == 'refs/heads/master'   # publish only from master
+    env:
+      PROJECT_PATH: Saucery.TUnit/Saucery.TUnit.csproj
+      PACKAGE_ID: Saucery.TUnit
+      BUILD_CONFIGURATION: Release
+      ARTIFACT_DIR: artifacts
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v5
+
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v5
+      with:
+        dotnet-version: 9.0.x
+
+    - name: Build package
+      run: |
+        dotnet restore "$PROJECT_PATH"
+        dotnet build "$PROJECT_PATH" -c "$BUILD_CONFIGURATION" --no-restore
+        mkdir -p "$ARTIFACT_DIR"
+        dotnet pack "$PROJECT_PATH" -c "$BUILD_CONFIGURATION" -o "$ARTIFACT_DIR" --no-build
+
+    - name: Determine local packed version
+      id: localver
+      shell: bash
+      run: |
+        set -euo pipefail
+        NUPKG="$(ls "$ARTIFACT_DIR"/${PACKAGE_ID}.*.nupkg | grep -v '\.symbols\.nupkg' | head -n1)"
+        BASENAME="$(basename "$NUPKG")"
+        LOCAL_VERSION="${BASENAME#${PACKAGE_ID}.}"
+        LOCAL_VERSION="${LOCAL_VERSION%.nupkg}"
+        echo "nupkg=$NUPKG"           >> "$GITHUB_OUTPUT"
+        echo "version=$LOCAL_VERSION"  >> "$GITHUB_OUTPUT"
+        echo "Local version: $LOCAL_VERSION"
+
+    - name: Query NuGet for latest published version
+      id: remotever
+      shell: bash
+      run: |
+        set -euo pipefail
+        LOWER_ID="$(echo "$PACKAGE_ID" | tr '[:upper:]' '[:lower:]')"
+        INDEX_URL="https://api.nuget.org/v3-flatcontainer/${LOWER_ID}/index.json"
+        if ! curl -fsSL "$INDEX_URL" -o /tmp/nuget_index.json; then
+          echo "version=" >> "$GITHUB_OUTPUT"
+          echo "Package not found on NuGet (first publish)."
+          exit 0
+        fi
+        REMOTE_VERSION="$(jq -r '.versions | last // empty' /tmp/nuget_index.json)"
+        echo "version=$REMOTE_VERSION" >> "$GITHUB_OUTPUT"
+        echo "Remote version: ${REMOTE_VERSION:-<none>}"
+
+    - name: Decide if publish is needed
+      id: decide
+      shell: bash
+      run: |
+        set -euo pipefail
+        LOCAL="${{ steps.localver.outputs.version }}"
+        REMOTE="${{ steps.remotever.outputs.version }}"
+        if [[ -z "$REMOTE" ]]; then
+          echo "publish=true" >> "$GITHUB_OUTPUT"
+          echo "No remote version; will publish."
+          exit 0
+        fi
+        HIGHEST="$(printf '%s\n' "$REMOTE" "$LOCAL" | sort -V | tail -n1)"
+        if [[ "$HIGHEST" == "$LOCAL" && "$LOCAL" != "$REMOTE" ]]; then
+          echo "publish=true" >> "$GITHUB_OUTPUT"
+          echo "Local ($LOCAL) > Remote ($REMOTE); will publish."
+        else
+          echo "publish=false" >> "$GITHUB_OUTPUT"
+          echo "Local ($LOCAL) is NOT greater than Remote ($REMOTE); skipping publish."
+        fi
+
+    - name: Publish to NuGet (only if newer)
+      if: steps.decide.outputs.publish == 'true'
+      env:
+        NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+      run: |
+        set -euo pipefail
+        if [[ -z "${NUGET_API_KEY:-}" ]]; then
+          echo "NUGET_API_KEY secret is missing." >&2
+          exit 1
+        fi
+        dotnet nuget push "${{ steps.localver.outputs.nupkg }}" \
+          --api-key "$NUGET_API_KEY" \
+          --source https://api.nuget.org/v3/index.json \
+          --skip-duplicate
+
   generate-report:
     runs-on: ubuntu-latest
-    needs: [tunit-integration-tests,
-            tunit-real-integration-tests]
+    needs: [publish-saucery-tunit]   # now runs AFTER publish job
     steps:
     - name: Checkout Code
       uses: actions/checkout@v5
@@ -172,25 +241,17 @@ jobs:
       uses: actions/download-artifact@v6
       with:
         name: tunit-real-integration-test-results
-    
-    # - name: Present working directory
-    #   run: pwd
-
-    # - name: Display structure of downloaded files
-    #   run: ls -R
 
     - name: ReportGenerator
       uses: danielpalme/ReportGenerator-GitHub-Action@5.4.18
       with:
-        # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
         reports: ${{env.UNIT_COVERAGE_FILENAME}}
-        targetdir: 'coveragereport' # REQUIRED # The directory where the generated report should be saved.
-        reporttypes: 'HtmlInline;Cobertura' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MarkdownSummary, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
+        targetdir: 'coveragereport'
+        reporttypes: 'HtmlInline;Cobertura'
 
     - name: Upload coverage report artifact
       uses: actions/upload-artifact@v5
       with:
-        name: CoverageReport # Artifact name        
-        path: coveragereport # Directory containing files to upload
-      # Use always() to always run this step to publish test results when there are test failures
+        name: CoverageReport
+        path: coveragereport
       if: ${{ always() }}
